<resources>
    <string name="Ike">Mike</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aihelp_chat_hint">Enter your message</string>
    <string name="aihelp_data_not_found_msg">Oops, no relevant data were found.</string>
    <string name="aihelp_data_retrieve_failed">Data acquisition failed</string>
    <string name="aihelp_faq_feedback">Please input your feedback</string>
    <string name="aihelp_faq_feedback_suggest">Suggestions</string>
    <string name="aihelp_faq_feedback_thanks">Thank you for the feedback.</string>
    <string name="aihelp_faq_fetching_faqs">Getting your answers…</string>
    <string name="aihelp_faq_search_empty">No FAQs found.</string>
    <string name="aihelp_faq_search_hint">Describe your problem</string>
    <string name="aihelp_friday">Friday</string>
    <string name="aihelp_media_upload_err_format">Unsupported files. Currently, only mp4, png, jpg, jpeg available when uploading.</string>
    <string name="aihelp_media_upload_err_size">The file size exceeds the limit, please upload the file smaller than %sM</string>
    <string name="aihelp_monday">Monday</string>
    <string name="aihelp_network_check_fine">After checking, your network is fine</string>
    <string name="aihelp_network_check_in_progress">Network checking is in progress. If you exit now, the checking will be interrupted.</string>
    <string name="aihelp_network_check_poor">Please confirm to send us network conditions, which will help us improve the quality of your network connection.</string>
    <string name="aihelp_network_checking">Network check is in progress</string>
    <string name="aihelp_network_error_msg">Oops! Something went wrong</string>
    <string name="aihelp_network_no_connect">Please check your network connection.</string>
    <string name="aihelp_network_upload_log_title">Poor network connection</string>
    <string name="aihelp_no">Cancel</string>
    <string name="aihelp_op_cs">HELP</string>
    <string name="aihelp_permission_denied">Upload image requires permission of accessing storage.</string>
    <string name="aihelp_permission_ignored">Please enable Settings > Permissions > Storage to use upload image function.</string>
    <string name="aihelp_permission_settings">Settings</string>
    <string name="aihelp_rate_additional_feedback_message">Any other feedback (optional)</string>
    <string name="aihelp_rate_app_hint">Would you like to review the App?</string>
    <string name="aihelp_rate_button">Rate</string>
    <string name="aihelp_rate_dissatisfied">Disliked it</string>
    <string name="aihelp_rate_finished">Thanks for rating us.</string>
    <string name="aihelp_rate_request">Please rate our service</string>
    <string name="aihelp_rate_satisfied">Liked it</string>
    <string name="aihelp_resolution_no">Unsolved</string>
    <string name="aihelp_resolution_request">Is your problem solved?</string>
    <string name="aihelp_resolution_yes">Solved</string>
    <string name="aihelp_saturday">Saturday</string>
    <string name="aihelp_send">Send</string>
    <string name="aihelp_sunday">Sunday</string>
    <string name="aihelp_thursday">Thursday</string>
    <string name="aihelp_ticket_closed">The current customer complaint ticket has been closed.</string>
    <string name="aihelp_tuesday">Tuesday</string>
    <string name="aihelp_view_details">View Details</string>
    <string name="aihelp_wednesday">Wednesday</string>
    <string name="aihelp_yes">Confirm</string>
    <string name="aihelp_yesterday">Yesterday</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="ankee">yankee</string>
    <string name="app_name">Alchemy Stars</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">回到游戏</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_line_login">Log in with LINE</string>
    <string name="cancel">取消</string>
    <string name="ce">ice</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_done">Done</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_next">Next</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">确定</string>
    <string name="copy_sucsess">已复制到剪切板</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="copylink">复制链接地址</string>
    <string name="default_web_client_id">72088820713-r1g801gh8tr7tj211j9ak11brl0os6ha.apps.googleusercontent.com</string>
    <string name="dmm_olgid_sdk_activity_title_payment_confirm">アイテム購入</string>
    <string name="dmm_olgid_sdk_activity_title_register_profile">プロフィール登録</string>
    <string name="dmm_olgid_sdk_already_register_profile">すでにプロフィール登録がされているユーザです</string>
    <string name="dmm_olgid_sdk_black_status_user">利用できないユーザです</string>
    <string name="dmm_olgid_sdk_cannot_get_application_info">アプリ情報が取得できませんでした</string>
    <string name="dmm_olgid_sdk_close">閉じる</string>
    <string name="dmm_olgid_sdk_logical_error_title">エラー</string>
    <string name="dmm_olgid_sdk_login_title">ログイン</string>
    <string name="dmm_olgid_sdk_sandbox_login_announce">サンドボックス環境へログインします。</string>
    <string name="dmm_olgid_sdk_sandbox_login_button_alternative">ログイン</string>
    <string name="dmm_olgid_sdk_sandbox_login_copyright">Copyright ©since 1998 DMM All Rights Reserved.</string>
    <string name="dmm_olgid_sdk_sandbox_login_id_hint">ユーザーID</string>
    <string name="dmm_olgid_sdk_sandbox_login_password_hint">パスワード</string>
    <string name="dmm_olgid_sdk_sandbox_login_save_id">ユーザーIDを保存する</string>
</resources>