<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/dmm_olgid_sdk_sandbox_login_announce_text_size" android:textStyle="bold" android:textColor="@color/dmm_olgid_sdk_sandbox_red" android:id="@id/dmm_olgid_sdk_sandbox_login_announce" android:paddingLeft="@dimen/dmm_olgid_sdk_sandbox_login_announce_padding" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dmm_olgid_sdk_sandbox_login_announce_margin" android:text="@string/dmm_olgid_sdk_sandbox_login_announce" />
            <EditText android:textSize="@dimen/dmm_olgid_sdk_sandbox_login_id_text_size" android:id="@id/dmm_olgid_sdk_sandbox_login_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dmm_olgid_sdk_sandbox_login_id_horizontal_margin" android:layout_marginTop="@dimen/dmm_olgid_sdk_sandbox_login_id_vertical_margin" android:layout_marginRight="@dimen/dmm_olgid_sdk_sandbox_login_id_horizontal_margin" android:hint="@string/dmm_olgid_sdk_sandbox_login_id_hint" android:layout_below="@id/dmm_olgid_sdk_sandbox_login_announce" android:inputType="textEmailAddress" />
            <CheckBox android:gravity="center_vertical" android:id="@id/dmm_olgid_sdk_sandbox_login_checkbox_save_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dmm_olgid_sdk_sandbox_login_save_id" android:layout_below="@id/dmm_olgid_sdk_sandbox_login_id" android:layout_alignLeft="@id/dmm_olgid_sdk_sandbox_login_id" android:layout_alignRight="@id/dmm_olgid_sdk_sandbox_login_id" style="@style/dmm_olgid_sdk_sandbox_login" />
            <EditText android:textSize="@dimen/dmm_olgid_sdk_sandbox_login_password_text_size" android:id="@id/dmm_olgid_sdk_sandbox_login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dmm_olgid_sdk_sandbox_login_password_vertical_margin" android:hint="@string/dmm_olgid_sdk_sandbox_login_password_hint" android:layout_below="@id/dmm_olgid_sdk_sandbox_login_checkbox_save_id" android:layout_alignLeft="@id/dmm_olgid_sdk_sandbox_login_id" android:layout_alignRight="@id/dmm_olgid_sdk_sandbox_login_id" android:inputType="textPassword" />
            <RelativeLayout android:id="@id/dmm_olgid_sdk_sandbox_login_button_area" android:background="@drawable/dmm_olgid_sdk_sandbox_background_login_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dmm_olgid_sdk_sandbox_login_area_vertical_margin" android:layout_below="@id/dmm_olgid_sdk_sandbox_login_password" android:layout_alignLeft="@id/dmm_olgid_sdk_sandbox_login_password" android:layout_alignRight="@id/dmm_olgid_sdk_sandbox_login_password">
                <ImageButton android:id="@id/dmm_olgid_sdk_sandbox_login_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dmm_olgid_sdk_sandbox_login_button_top_margin" android:layout_marginBottom="@dimen/dmm_olgid_sdk_sandbox_login_button_bottom_margin" android:src="@drawable/dmm_olgid_sdk_sandbox_button_login" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:contentDescription="@string/dmm_olgid_sdk_sandbox_login_button_alternative" android:layout_marginStart="@dimen/dmm_olgid_sdk_sandbox_login_button_horizontal_margin" android:layout_marginEnd="@dimen/dmm_olgid_sdk_sandbox_login_button_horizontal_margin" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dmm_olgid_sdk_sandbox_login_copyright_top_margin" android:layout_below="@id/dmm_olgid_sdk_sandbox_login_button_area">
                <ImageView android:id="@id/dmm_olgid_sdk_sandbox_login_line_shadow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/dmm_olgid_sdk_sandbox_background_line_shadow" />
                <ImageView android:id="@id/dmm_olgid_sdk_sandbox_login_copyright" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dmm_olgid_sdk_sandbox_login_copyright_top_margin" android:layout_marginBottom="@dimen/dmm_olgid_sdk_sandbox_login_copyright_bottom_margin" android:src="@drawable/dmm_olgid_sdk_sandbox_copyright" android:layout_below="@id/dmm_olgid_sdk_sandbox_login_line_shadow" android:contentDescription="@string/dmm_olgid_sdk_sandbox_login_copyright" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>